added warehouse props

--- a/warehouse-service.properties
+++ b/warehouse-service.properties
@@ -7,7 +7,7 @@ spring.jpa.hibernate.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 # Logging
-logging.level.root=TRACE
+logging.level.root=INFO
 
 # Eureka Client cfg
 eureka.client.serviceUrl.defaultZone = http://localhost:9000/eureka
