--- a/warehouse-service.properties
+++ b/warehouse-service.properties
@@ -1,17 +1,15 @@
+# Logging
+logging.level.root=INFO
+
 # Hibernate Properties
 spring.jpa.hibernate.ddl-auto=none
 
 # JPA Properties
 spring.jpa.show-sql=true
-spring.jpa.hibernate.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# Logging
-logging.level.root=INFO
-
 # Eureka Client cfg
-eureka.client.serviceUrl.defaultZone = http://localhost:9000/eureka
-spring.application.name=warehouse-service
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 # Server
-server.port=8083
+server.port=0
