--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -33,3 +33,8 @@ spring.cloud.gateway.routes[4].filters[0]=SetPath=/
 spring.cloud.gateway.routes[5].id=discovery-server-static
 spring.cloud.gateway.routes[5].uri=http://localhost:9000
 spring.cloud.gateway.routes[5].predicates[0]=Path=/eureka/**
+
+# Api server Config Route
+spring.cloud.gateway.routes[6].id=api-gateway-cfg
+spring.cloud.gateway.routes[6].uri=lb://api-gateway
+spring.cloud.gateway.routes[6].predicates[0]=Path=/api-gateway/*
