--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -36,5 +36,5 @@ spring.cloud.gateway.routes[5].predicates[0]=Path=/eureka/**
 
 # Api server Config Route
 spring.cloud.gateway.routes[6].id=api-gateway-cfg
-spring.cloud.gateway.routes[6].uri=lb://config-service
+spring.cloud.gateway.routes[6].uri=lb://config-server
 spring.cloud.gateway.routes[6].predicates[0]=Path=/api-gateway/**
