--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -34,7 +34,7 @@ spring.cloud.gateway.routes[5].id=discovery-server-static
 spring.cloud.gateway.routes[5].uri=http://localhost:9000
 spring.cloud.gateway.routes[5].predicates[0]=Path=/eureka/**
 
-# Api server Config Route
+# Config server -> Api Gateway Cfg
 spring.cloud.gateway.routes[6].id=api-gateway-cfg
 spring.cloud.gateway.routes[6].uri=lb://config-server
 spring.cloud.gateway.routes[6].predicates[0]=Path=/api-gateway/**
