--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -6,7 +6,7 @@ logging.level.org.springframework.cloud.gateway=TRACE
 # Warehouse Service Products Route
 spring.cloud.gateway.routes[0].id=warehouse-service-products
 spring.cloud.gateway.routes[0].uri=lb://warehouse-service
-spring.cloud.gateway.routes[0].predicates[0]=Path=/api/products
+spring.cloud.gateway.routes[0].predicates[0]=Path=/api/products/**
 
 # Warehouse Service Categories Route
 spring.cloud.gateway.routes[1].id=warehouse-service-categories
