--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -11,12 +11,12 @@ spring.cloud.gateway.routes[0].predicates[0]=Path=/api/products/**
 # Warehouse Service Categories Route
 spring.cloud.gateway.routes[1].id=warehouse-service-categories
 spring.cloud.gateway.routes[1].uri=lb://warehouse-service
-spring.cloud.gateway.routes[1].predicates[0]=Path=/api/categories
+spring.cloud.gateway.routes[1].predicates[0]=Path=/api/categories/**
 
 # Order Service Route
 spring.cloud.gateway.routes[2].id=order-service
 spring.cloud.gateway.routes[2].uri=lb://order-service
-spring.cloud.gateway.routes[2].predicates[0]=Path=/api/orders
+spring.cloud.gateway.routes[2].predicates[0]=Path=/api/orders/**
 
 # Inventory Service Route
 spring.cloud.gateway.routes[3].id=inventory-service
