--- a/warehouse-service.yml
+++ b/warehouse-service.yml
@@ -22,6 +22,9 @@ spring:
     locations: classpath:db.migration
     enabled: true
 
+    server:
+      port: 1212
+
 ---
 spring:
   config:
@@ -41,3 +44,6 @@ spring:
     baseline-version: 1
     locations: classpath:db.migration
     enabled: true
+
+server:
+  port: 9010
