handle kafka producer / consumer configuration

--- a/order-service.yml
+++ b/order-service.yml
@@ -17,6 +17,11 @@ spring:
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      properties:
+        spring:
+          json:
+            type:
+              mapping: event:com.fiolekp.orderservice.order.event.NewOrderEvent
 
 management:
   endpoints:
