--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -46,6 +46,7 @@ spring:
         id: config-server-actuator
         uri: lb://config-server
         predicates: Path=/actuator/**
+        filters: SetPath=/cfg/actuator/**
 
 
 management:
