fixed route for config-server actuator

--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -46,9 +46,7 @@ spring:
         id: config-server-actuator
         uri: lb://config-server
         predicates: Path=/cfg/actuator/**
-        filters: SetPath=/actuator/**
-
-
+        filters: RewritePath=/actuator/(?<segment>.*), /$\{segment}
 
 management:
   endpoint:
