--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -51,7 +51,7 @@ management:
       enabled: true
     web:
       exposure:
-        include: health,gateway
+        include: gateway,health
 
 logging:
   level:
