--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -66,6 +66,7 @@ management:
   endpoint:
     gateway:
       enabled: true
+  endpoints:
     web:
       exposure:
         include: gateway,health
