--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -57,11 +57,6 @@ spring:
         uri: lb://config-server
         predicates: Path=/inventory-service/**
 
-      routes[10]:
-        id: api-gateway-gateway-actuator
-        uri: http://localhost:8080
-        predicates: Path=/actuator/gateway/**
-
 management:
   endpoint:
     gateway:
@@ -77,6 +72,7 @@ logging:
   org:
     springframework:
       cloud:
-        gateway:
-          route:
-            RouteDefinitionLocator: TRACE
+        gateway: TRACE
+      http: TRACE
+      web: TRACE
+      reactor: TRACE
