--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -57,6 +57,12 @@ spring:
         uri: lb://config-server
         predicates: Path=/inventory-service/**
 
+      httpclient:
+        wiretap: true
+      httpserver:
+        wiretap: true
+
+
 management:
   endpoint:
     gateway:
@@ -69,6 +75,8 @@ management:
 logging:
   level:
     root: INFO
+  reactor:
+    netty: INFO
   org:
     springframework:
       cloud:
