--- a/notification-service.yml
+++ b/notification-service.yml
@@ -8,6 +8,7 @@ spring:
     template:
       default-topic: lastOrdersTopic
     consumer:
+      group-id: notificationServiceGroupID
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       properties:
