--- a/order-service.yml
+++ b/order-service.yml
@@ -11,7 +11,6 @@ spring:
         format_sql: true
 
   kafka:
-    bootstrap-servers: localhost:9092
     template:
       default-topic: lastOrdersTopic
     producer:
@@ -80,6 +79,9 @@ spring:
     locations: classpath:db.migration
     enabled: true
 
+  kafka:
+    bootstrap-servers: localhost:9092
+
 server:
   port: 9025
 
@@ -106,6 +108,9 @@ spring:
     locations: classpath:db.migration
     enabled: true
 
+  kafka:
+    bootstrap-servers: kafka-broker-basic:9092
+
 server:
   port: 9030
 
@@ -130,6 +135,9 @@ spring:
     locations: classpath:db.migration
     enabled: true
 
+  kafka:
+    bootstrap-servers: kafka-broker-ly:9092
+
 server:
   port: 9030
 
@@ -153,6 +161,9 @@ spring:
     baseline-version: 1
     locations: classpath:db.migration
     enabled: true
+
+  kafka:
+    bootstrap-servers: kafka-broker-msb:9092
 
 server:
   port: 9030
